# Eduplatform

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pre-commit-config.yml  pyproject.toml
.edu.db/postgres/: postmaster.pid
.edu.db/postgres/base/13780/: 2619
.edu.db/postgres/global/: 1260  1262  2671  pg_control
.edu.db/postgres/pg_stat_tmp/: global.stat
eduplatform/eduplatform/: settings.py  urls.py
eduplatform/mentorship/: admin.py  annotations.py  consts.py  endpoints.py  managers.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
eduplatform/mentorship/migrations/: 0001_create_user_model.py  0002_create_teacher_model.py  0003_create_student_model.py  0004_create_group_model.py  0005_create_course_model.py
eduplatform/testing_system/: admin.py  endpoints.py  models.py  serializers.py  tests.py  urls.py
eduplatform/testing_system/migrations/: 0001_create_group_model.py  0002_create_course_model.py  0003_create_topic_model.py  0004_create_article_model.py  0005_create_test_model.py  0006_create_question_model.py  0007_create_answer_model.py  0008_create_attempt_model.py
